[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aioquiqy"
version = "0.2.0"
description = "Async Python wrapper for Quiqy payment API"
authors = ["Λ sobakavosne@protonmail.com"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/don-t-worry-about-the-bullet/aioquiqy"
repository = "https://github.com/don-t-worry-about-the-bullet/aioquiqy"
documentation = "https://github.com/don-t-worry-about-the-bullet/aioquiqy#readme"
keywords = ["quiqy", "payment", "api", "async", "cryptocurrency", "aiohttp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
]
packages = [{ include = "aioquiqy" }]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.0"
pydantic = "^2.0.0"
certifi = "^2023.0.0"
strenum = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
