[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aioquiqy-stubs"
version = "0.2.3"
description = "Type stubs for aioquiqy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aioquiqy>=0.2.3",
]

[project.urls]
Homepage = "https://github.com/don-t-worry-about-the-bullet/aioquiqy"
Repository = "https://github.com/don-t-worry-about-the-bullet/aioquiqy"
Documentation = "https://github.com/don-t-worry-about-the-bullet/aioquiqy#readme"

[tool.setuptools]
packages = ["aioquiqy-stubs"]

[tool.setuptools.package-data]
"aioquiqy-stubs" = ["py.typed", "*.pyi"]
